# timeseries_extension

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  build_package.sh  postgres.supp  simple_timeseries.control  test_memleak.sh  uninstall.sh
project/: CMakeLists.txt  build.sh  simple_timeseries.control
project/sql/: simple_timeseries--1.0.sql
project/src/: hypertable.c  init.c  launcher.c  launcher.h  metadata.h  planner.h  trigger.c  utils.c
project/test/: test_chunk_prune.sql  test_continuous_aggregate.sql  test_retention.sql  test_utils.sql
project/tsl/src/: compression.c  compression.h  continuous_aggs.c  retention.c
scripts/: install.sh
sql/: simple_timeseries--1.0.sql
src/: chunk.c  chunk.h  compression.c  compression.h  delta.c  delta.h  delta_of_delta.c  delta_of_delta.h  dictionary.c  dictionary.h  hypertable.c  init.c  metadata.c  metadata.h  planner.c  planner.h  retention.c  retention.h  trigger.c  trigger.h
src/loader/: launcher.c  launcher.h
test/: test_chunk.sql  test_compression.sql  test_continuous_aggregate.sql  test_delta_compression.sql  test_dict_compression.sql  test_dod_compression.sql  test_hypertable.sql  test_insert_trigger.sql  test_metadata.sql  test_planner.sql  test_retention.sql  test_trigger.sql  test_trigger_insert.sql
tsl/src/: compression.c  compression.h  continuous_aggs.c  continuous_aggs.h  retention.c
